# verbly

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  adjective.cpp  adjective.h  adverb.cpp  adverb.h  data.h  noun.cpp  noun.h  token.h  util.h  verb.h  verbly.h  word.h
generator/: CMakeLists.txt  database.cpp  database.h  field.cpp  field.h  form.cpp  form.h  frame.cpp  frame.h  generator.cpp  generator.h  group.cpp  group.h  lemma.cpp  lemma.h  main.cpp  notion.cpp  notion.h  part.cpp  part.h  prepositions.txt  progress.h  pronunciation.cpp  pronunciation.h  role.h  schema.sql  selrestr.cpp  selrestr.h  vn-3.2.diff  vn.diff  word.cpp  word.h
lib/: adjective.cpp  adjective.h  adjective_query.cpp  adjective_query.h  adverb.cpp  adverb.h  adverb_query.cpp  adverb_query.h  binding.cpp  binding.h  data.cpp  data.h  database.cpp  database.h  enums.h  field.cpp  field.h  filter.cpp  filter.h  form.cpp  form.h  frame.cpp  frame.h  frame_query.cpp  frame_query.h  group.cpp  group.h  lemma.cpp  lemma.h  notion.cpp  notion.h  noun.cpp  noun.h  noun_query.cpp  noun_query.h  order.h  part.cpp  part.h  preposition.cpp  preposition.h  (+19 more)
